--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="light" id="top">
   <header class="header center">
     <h4>
-      <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link tangerine">Rajvi Shah</a>
+      <a href="https://rajvishah.netlify.app/" class="link tangerine">Rajvi Shah</a>
     </h4>
 
     <nav class="nav center">
@@ -140,11 +140,11 @@
                 Hey! It's
                 <strong>Rajvi Shah</strong>
                 and I'm a <strong> Web Developer </strong> located in
-                Gujarat, Bhavnagar.
+                Bhavnagar, Gujarat.
               </p>
               <p class="about__content-details-para">
-                I have total 1+ years of experience in NodeJS and React. I am a curious learner. I love building MERN Stack
-                Web Apps
+                I am a curious learner. I love building MERN Stack
+                Web Apps.
                 Feel free to
                 <strong>contact</strong> me here.
               </p>
@@ -154,7 +154,7 @@
             </a>
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">My Skills</h3>
+            <h3 class="about__content-title">My Skillset</h3>
             <ul class="skills__list">
               <li class="skills__list-item btn btn--plain">React</li>
               <li class="skills__list-item btn btn--plain">Express</li>
