added cloth management api

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/fa62c117c7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css" />
   <title>Rajvi Shah</title>
-  </head>
+</head>
 
 <body class="light" id="top">
   <header class="header center">
@@ -28,8 +28,8 @@
         </li>
         <li class="nav__list-item">
           <a class="link link--nav" href="#skills">About</a>
-          </li>
-          </ul>
+        </li>
+      </ul>
 
       <button type="button" aria-label="toggle theme" class="btn btn--icon">
         <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
@@ -38,8 +38,8 @@
       <button type="button" aria-label="toggle navigation" class="btn btn--icon nav__hamburger">
         <i aria-hidden="true" class="fas fa-bars"></i>
       </button>
-      </nav>
-      </header>
+    </nav>
+  </header>
   <main>
     <div class="flex_layout">
       <div>
@@ -71,13 +71,13 @@
         <div class="project">
           <h3>Inshorts-Clone</h3>
           <p class="project__description">
-          A MERN Stack project build using Material UI and Express frameworks to fetch news from MongoDB database.
+            A MERN Stack project build using Material UI and Express frameworks to fetch news from MongoDB database.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">NodeJS</li>
             <li class="project__stack-item">JavaScript</li>
             <li class="project__stack-item">React</li>
-            </ul>
+          </ul>
 
           <a href="https://github.com/rajvishah23" aria-label="source code" class="link link--icon">
             <i aria-hidden="true" class="fab fa-github"></i>
@@ -85,19 +85,19 @@
           <a href="https://inshortscloneproject.herokuapp.com/" aria-label="live preview" class="link link--icon">
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
           </a>
-          </div>
+        </div>
 
         <div class="project">
           <h3>Zubloc</h3>
           <p class="project__description">
             A MERN Stack project build for artists and musicians <br>
             to buy and sell assets using Metamask wallet.
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">Express</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
+          </p>
+          <ul class="project__stack">
+            <li class="project__stack-item">Express</li>
+            <li class="project__stack-item">TypeScript</li>
+            <li class="project__stack-item">React</li>
+          </ul>
 
           <a href="https://github.com/rajvishah23" aria-label="source code" class="link link--icon">
             <i aria-hidden="true" class="fab fa-github"></i>
@@ -105,18 +105,37 @@
           <a href="https://zubloc.com/" aria-label="live preview" class="link link--icon">
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
           </a>
-          </div>
+        </div>
+
+        <div class="project">
+          <h3>Cloth-Management-Apis</h3>
+          <p class="project__description">
+            A backend API for a cloth management mobile app.CRUD on clothes(with JWT authentication)
+          </p>
+          <ul class="project__stack">
+            <li class="project__stack-item">NodeJS</li>
+            <li class="project__stack-item">Passport</li>
+            <li class="project__stack-item">JWT</li>
+          </ul>
+
+          <a href="https://github.com/rajvishah23" aria-label="source code" class="link link--icon">
+            <i aria-hidden="true" class="fab fa-github"></i>
+          </a>
+          <a href="https://inshortscloneproject.herokuapp.com/" aria-label="live preview" class="link link--icon">
+            <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+          </a>
+        </div>
 
         <div class="project">
           <h3>Online Store</h3>
           <p class="project__description">
-          A MERN Stack Online Store build <br> as a guided project from Udemy that handles payment using STRIPE.
+            A MERN Stack Online Store build <br> as a guided project from Udemy that handles payment using STRIPE.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">STRIPE</li>
             <li class="project__stack-item">Mongoose</li>
             <li class="project__stack-item">React</li>
-            </ul>
+          </ul>
 
           <a href="https://github.com/rajvishah23/Online-Store-Udemy" aria-label="source code" class="link link--icon">
             <i aria-hidden="true" class="fab fa-github"></i>
@@ -124,9 +143,9 @@
           <a href="https://example.com" aria-label="live preview" class="link link--icon">
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
           </a>
-          </div>
-          </div>
-          </section>
+        </div>
+      </div>
+    </section>
 
     <!-- Skills -->
     <section class="section about__new sec-pad" id="skills">
@@ -172,12 +191,12 @@
               <li class="skills__list-item btn btn--plain">Puppeteer</li>
               <li class="skills__list-item btn btn--plain">Formik</li>
               <li class="skills__list-item btn btn--plain">REST</li>
-              </ul>
+            </ul>
           </div>
-          </div>
-          </div>
-          </section>
-          </main>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="main-footer">
     <div class="main-container">
       <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
@@ -188,6 +207,6 @@
     </div>
   </footer>
   <script src="./script.js"></script>
-  </body>
+</body>
 
 </html>
